# lospec-palette-scrapper

./: .gitignore  README.md  alembic.ini  lospec-palettes.sqlite  lospec-palettes.sqlite.license  models.py  pyproject.toml  scrap.py
.reuse/: dep5
alembic/: env.py  script.py.mako
docs/: github-social.svg.license
palettes/: .json
palettes/100/: 100.json
palettes/10plus6colorpalette/: 10plus6colorpalette.json
palettes/120385/: 120385.json
palettes/12bit/: 12bit.json
palettes/13rusque/: 13rusque.json
palettes/15pdx/: 15pdx.json
palettes/16bital/: 16bital.json
palettes/16dan/: 16dan.json
palettes/17abovezero/: 17abovezero.json
palettes/17pastels/: 17pastels.json
palettes/17undertones/: 17undertones.json
palettes/17vivid/: 17vivid.json
palettes/1985palette/: 1985palette.json
palettes/1bit/: 1bit.json
palettes/1bitblackandwhite/: 1bitblackandwhite.json
palettes/1bitblue/: 1bitblue.json
palettes/1bitchill/: 1bitchill.json
palettes/1bitmonitorglow/: 1bitmonitorglow.json
palettes/1bitnoire/: 1bitnoire.json
palettes/1bitpepper/: 1bitpepper.json
palettes/1bitrainbowhorror/: 1bitrainbowhorror.json
palettes/1peckspalette/: 1peckspalette.json
palettes/201904220xdb01/: 201904220xdb01.json
palettes/20mnpalette/: 20mnpalette.json
palettes/20pdx/: 20pdx.json
palettes/24pdx/: 24pdx.json
palettes/24universal/: 24universal.json
palettes/2bitcatgirlsrise/: 2bitcatgirlsrise.json
palettes/2bitdemiboy/: 2bitdemiboy.json
palettes/2bitdemichrome/: 2bitdemichrome.json
palettes/2bitgrayscale/: 2bitgrayscale.json
palettes/32/: 32.json
(+2059 files in other folders)
