[tool.poetry]
name = "lospec-color-palette-rip"
version = "0.1.0"
description = ""
authors = ["Agathe Porte <microjoe@microjoe.org>"]
readme = "README.md"
packages = [{include = "lospec_color_palette_rip"}]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
SQLAlchemy = "^1.4.31"


[tool.poetry.group.dev.dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
