[tool.poetry]
name = "lospec-palette-scrapper"
version = "0.1.0"
description = "A web scrapper for the LOSPEC color palettes. "
authors = ["Agathe Porte <microjoe@microjoe.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
SQLAlchemy = "^1.4.31"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"